# ocpp_server

./: .gitignore  CMakeLists.txt  CMakeLists_app.txt  ChargePoint.ini  Info.md  Query.md  Readme.md  main.cpp
certificates/: ca.crt
config/: ocpp_config.ini
html/client/: index.html  simple-debug.html  ws-simple.html
html/client/admin/: index.html
html/client/css/: style.css
html/server/: 404.html  index.html
src/: CMakeLists.txt  Version.cpp
src/ocpp/: CMakeLists.txt
src/ocpp/config/: CMakeLists.txt  CentralSystemConfig.cpp  CentralSystemConfig.h  CentralSystemDemoConfig.h
src/ocpp/event/: CMakeLists.txt  DefaultCentralSystemEventsHandler.cpp  DefaultCentralSystemEventsHandler.h
src/ocpp/manager/: CMakeLists.txt  OcppManager.cpp  OcppManager.h  main.c
src/server/: CMakeLists.txt  Server.cpp  Server.h
src/web/: CMakeLists.txt  CSWebServer.cpp  CSWebServer.h  WebServer.cpp  WebServer.h
src/web/server/: HttpRequestHandler.cpp  HttpRequestHandler.h  WebSocketServer.cpp  WebSocketServer.h  WebSocketSession.cpp  WebSocketSession.h
src/web1/: CMakeLists.txt  WebServer.cpp  WebServer.h
tools/: add_debug_settings_to_vscode.py  clear_build.sh  is_ok_ip_port.sh  is_ok_port.sh  virtual_com.sh  vscode_debug_settings.json
web/: index copy.html  index.html
web/client/: network-test.html  simple-test.html  test-simple.html  test.html  ws-debug.html  ws-fixed.html  ws-test.html
web/client/admin/css/: admin.css
web/client/admin/js/: admin.js
web/client/js/: monitoring.js
web/css/: index.css  styles.css
web/js/: central_system.js  central_system_bak.js  index.js  rpc-client.js  tooltips.js
